重构(ALL): 升级 Spring Boot 到 3.3.6
- 将 Spring Boot版本从 2.7.6 升级到 3.3.6
- 启用虚拟线程支持
- 更新相关依赖版本：
  - io.spring.dependency-management: 1.1.4 -> 1.1.6  - io.freefair.aspectj.post-compile-weaving: 6.5.0.3 -> 8.11
  - redis.clients:jedis: 5.0.2 -> 5.2.0
  - com.fasterxml.jackson.core:jackson-core: 2.17.1 -> 2.18.2
  - com.fasterxml.jackson.core:jackson-annotations: 2.17.1 -> 2.18.2
  - com.fasterxml.jackson.core:jackson-databind: 2.17.1 -> 2.18.2
  - cn.hutool:hutool-all: 5.8.32 -> 5.8.34
- 移除 com.tangzc:auto-table-spring-boot-starter 依赖
- 添加 org.dromara.autotable:auto-table 依赖
- 更新 cn.dev33:sa-token-spring-boot-starter 为 spring-boot3 版本
- 更新 com.tangzc:mybatis-flex-ext-spring-boot-starter 为 spring-boot3 版本
- 更新 Java 语言版本到 21- 添加 --enable-preview
- 在 bootRun 任务中添加 --enable-preview JVM 参数