@@ -1,8 +1,8 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '2.7.6'
-    id 'io.spring.dependency-management' version '1.1.4'
-    id 'io.freefair.aspectj.post-compile-weaving' version '6.5.0.3'
+    id 'org.springframework.boot' version '3.3.6'
+    id 'io.spring.dependency-management' version '1.1.6'
+    id 'io.freefair.aspectj.post-compile-weaving' version '8.11'
 }
 
 configurations {
@@ -29,8 +29,16 @@ subprojects {
 
     java {
         toolchain {
-            languageVersion = JavaLanguageVersion.of(17)
+            languageVersion = JavaLanguageVersion.of(21)
         }
+    }
+
+    tasks.withType(JavaCompile) {
+        options.compilerArgs += ['--enable-preview']
+    }
+
+    tasks.named('bootRun', org.springframework.boot.gradle.tasks.run.BootRun) {
+        jvmArgs '--enable-preview'
     }
 
     repositories {
@@ -48,18 +56,21 @@ subprojects {
         // Spring Actuator
         implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
-        // AspectJ 运行时库
-        implementation 'org.aspectj:aspectjrt:1.9.19'
+        // Spring Data Redis
+        implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
         // Apache Commons Codec
         implementation 'org.netbeans.external:org-apache-commons-codec:RELEASE230'
 
+        // AspectJ 运行时库
+        implementation 'org.aspectj:aspectjrt:1.9.22.1'
+
         // AspectJ 编译器
-        //implementation 'org.aspectj:aspectjtools:1.9.19'
+        //implementation 'org.aspectj:aspectjtools:1.9.22.1'
 
         // AspectJ Weaver
-        implementation 'org.aspectj:aspectjweaver:1.9.19'
-        annotationProcessor 'org.aspectj:aspectjweaver:1.9.19'
+        implementation 'org.aspectj:aspectjweaver:1.9.22.1'
+        annotationProcessor 'org.aspectj:aspectjweaver:1.9.22.1'
 
         // Reflections, 仓库地址: https://github.com/ronmamo/reflections
         //implementation 'org.reflections:reflections:0.10.2'
@@ -72,20 +83,17 @@ subprojects {
         annotationProcessor 'org.projectlombok:lombok'
 
         // MyBatis-Flex
-        implementation 'com.mybatis-flex:mybatis-flex-spring-boot-starter:1.10.1'
+        implementation 'com.mybatis-flex:mybatis-flex-spring-boot3-starter:1.10.1'
         annotationProcessor 'com.mybatis-flex:mybatis-flex-processor:1.10.1'
 
         // Auto Table, 官方文档: https://autotable.tangzc.com/
-        implementation 'com.tangzc:auto-table-spring-boot-starter:1.9.6.1'
-
-        // Sa-Token
-        implementation 'cn.dev33:sa-token-spring-boot-starter:1.39.0'
+        implementation 'org.dromara.autotable:auto-table:2.0.2'
 
         // MyBatis-Flex + Auto Table的拓展包, 仓库地址: https://gitee.com/tangzc/mybatis-flex-ext
-        implementation 'com.tangzc:mybatis-flex-ext-spring-boot-starter:1.10.1.054'
+        implementation 'com.tangzc:mybatis-flex-ext-spring-boot3-starter:1.10.2.100'
 
         // Sa-Token
-        implementation 'cn.dev33:sa-token-spring-boot-starter:1.39.0'
+        implementation 'cn.dev33:sa-token-spring-boot3-starter:1.39.0'
 
         // Sa-Token 整合 Redis （使用 jackson 序列化方式）
         implementation 'cn.dev33:sa-token-redis-jackson:1.39.0'
@@ -94,19 +102,19 @@ subprojects {
         implementation 'cn.dev33:sa-token-jwt:1.39.0'
 
         // Jedis
-        implementation 'redis.clients:jedis:5.0.2'
+        implementation 'redis.clients:jedis:5.2.0'
 
         // Jackson Core
-        implementation 'com.fasterxml.jackson.core:jackson-core:2.17.1'
+        implementation 'com.fasterxml.jackson.core:jackson-core:2.18.2'
 
         // Jackson Annotations
-        implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.1'
+        implementation 'com.fasterxml.jackson.core:jackson-annotations:2.18.2'
 
         // Jackson Databind
-        implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
+        implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.2'
 
         // HuTool
-        implementation 'cn.hutool:hutool-all:5.8.32'
+        implementation 'cn.hutool:hutool-all:5.8.34'
 
         // OK HTTPS
         implementation 'com.ejlchina:okhttps:3.1.1'
